@@ -109,7 +109,7 @@ BEGIN {
 		_postfix_foreach        => version->new('5.004.05'),
 	);
 	@CHECKS_RV = ( #subs that return version
-	    '_feature_bundle','_regex',
+	    '_feature_bundle','_regex','_each_argument',
 	);
 
 	# Predefine some indexes needed by various check methods
@@ -573,6 +573,39 @@ sub _regex {
 	} );
 	$version = undef if $version eq '5.000';
 	return ($version, $obj);
+}
+
+sub _each_argument {
+    my ($version, $obj);
+	shift->Document->find( sub {
+		$_[1]->isa('PPI::Token::Word') or return '';
+		$_[1]->content =~ '^(each|keys|values)$'  or return '';
+		my $next = $_[1]->snext_sibling;
+		$next = $next->schild(0)->schild(0) if $next->isa('PPI::Structure::List');
+		if($next->isa('PPI::Token::Cast')) {
+			if($next->content eq '@' && 5.012 > ($version || 0)) {
+				$version = 5.012;
+				$obj = $_[1]->parent;
+			} elsif($next->content eq '$' && 5.014 > ($version || 0)) {
+				$version = 5.014;
+				$obj = $_[1]->parent;
+			}
+		} elsif($next->isa('PPI::Token::Symbol')) {
+			if($next->raw_type eq '@' && 5.012 > ($version || 0)) {
+				$version = 5.012;
+				$obj = $_[1]->parent;
+			} elsif($next->raw_type eq '$' && 5.104 > ($version || 0)) {
+				$version = 5.014;
+				$obj = $_[1]->parent;
+			}
+		} else { # function call or other should be reference
+			if(5.014 > ($version || 0)) {
+				$version = 5.014;
+				$obj = $_[1]->parent;
+			}
+		}
+	} );
+	return (defined($version)?"$version":undef, $obj);
 }
 
 sub _yada_yada_yada {
